--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta charset="UTF-8">
     <title>Shaka Player with JW Design</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
     <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
@@ -28,16 +28,14 @@
             height: 100%;
         }
 
-        /* إخفاء زر توسيع الشاشة */
+        /* إخفاء زر التوسيع */
         .jw-button-container .jw-icon-fullscreen {
             display: none !important;
         }
 
-        /* التأكد من عدم وجود تأثير على التخطيط */
-        .jw-button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        /* إخفاء أي زر تحكم آخر قد يسبب تداخلًا */
+        .jw-button-container .jw-icon {
+            display: none !important;
         }
     </style>
 </head>
@@ -93,3 +91,51 @@
             shakaPlayer.configure({
                 drm: {
                     clearKeys: {
+                        [keyId]: keyValue
+                    }
+                }
+            });
+
+            try {
+                await shakaPlayer.load(manifest);
+                console.log('تم تحميل الفيديو المحمي بـ DRM بنجاح.');
+
+                // إعداد تصميم JW Player
+                const player = jwplayer("jwplayerDiv").setup({
+                    file: manifest,
+                    width: "100%",
+                    height: "100%",
+                    type: "dash",
+                    autostart: true,
+                    drm: {
+                        clearkey: {
+                            keyId: keyId,
+                            key: keyValue
+                        }
+                    },
+                    skin: {
+                        name: "glow"
+                    }
+                });
+
+                // فرض وضع ملء الشاشة دائمًا
+                player.on('ready', async () => {
+                    await enableFullscreen(document.getElementById('video-container'));
+
+                    // قفل الشاشة في الوضع الأفقي
+                    if (screen.orientation && screen.orientation.lock) {
+                        try {
+                            await screen.orientation.lock('landscape');
+                        } catch (error) {
+                            console.warn('تعذر قفل الشاشة:', error);
+                        }
+                    }
+                });
+
+            } catch (error) {
+                console.error('حدث خطأ أثناء تحميل الفيديو:', error);
+            }
+        });
+    </script>
+</body>
+</html>
