--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <title>Shaka Player with JW Design</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
     <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
@@ -28,14 +28,16 @@
             height: 100%;
         }
 
-        /* إخفاء زر التوسيع */
+        /* إخفاء زر توسيع الشاشة */
         .jw-button-container .jw-icon-fullscreen {
             display: none !important;
         }
 
-        /* إخفاء أي زر تحكم آخر قد يسبب تداخلًا */
-        .jw-button-container .jw-icon {
-            display: none !important;
+        /* التأكد من عدم وجود تأثير على التخطيط */
+        .jw-button-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     </style>
 </head>
@@ -91,51 +93,3 @@
             shakaPlayer.configure({
                 drm: {
                     clearKeys: {
-                        [keyId]: keyValue
-                    }
-                }
-            });
-
-            try {
-                await shakaPlayer.load(manifest);
-                console.log('تم تحميل الفيديو المحمي بـ DRM بنجاح.');
-
-                // إعداد تصميم JW Player
-                const player = jwplayer("jwplayerDiv").setup({
-                    file: manifest,
-                    width: "100%",
-                    height: "100%",
-                    type: "dash",
-                    autostart: true,
-                    drm: {
-                        clearkey: {
-                            keyId: keyId,
-                            key: keyValue
-                        }
-                    },
-                    skin: {
-                        name: "glow"
-                    }
-                });
-
-                // فرض وضع ملء الشاشة دائمًا
-                player.on('ready', async () => {
-                    await enableFullscreen(document.getElementById('video-container'));
-
-                    // قفل الشاشة في الوضع الأفقي
-                    if (screen.orientation && screen.orientation.lock) {
-                        try {
-                            await screen.orientation.lock('landscape');
-                        } catch (error) {
-                            console.warn('تعذر قفل الشاشة:', error);
-                        }
-                    }
-                });
-
-            } catch (error) {
-                console.error('حدث خطأ أثناء تحميل الفيديو:', error);
-            }
-        });
-    </script>
-</body>
-</html>
