--- a/index.html
+++ b/index.html
@@ -17,27 +17,17 @@
         }
 
         #video-container {
-            width: 100%;
-            height: 100%;
+            width: 80%;
+            max-width: 1280px;
+            aspect-ratio: 16 / 9;
             background: #000;
             position: relative;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
         }
 
         #jwplayerDiv {
             width: 100%;
             height: 100%;
-        }
-
-        /* إخفاء زر توسيع الشاشة */
-        .jw-button-container .jw-icon-fullscreen {
-            display: none !important;
-        }
-
-        /* التأكد من عدم وجود تأثير على التخطيط */
-        .jw-button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
         }
     </style>
 </head>
@@ -54,17 +44,6 @@
                 manifest: params.get('manifest'),
                 drmKey: params.get('drmkey')
             };
-        }
-
-        // تفعيل ملء الشاشة دائمًا
-        async function enableFullscreen(element) {
-            if (element.requestFullscreen) {
-                await element.requestFullscreen();
-            } else if (element.webkitRequestFullscreen) {
-                await element.webkitRequestFullscreen();
-            } else if (element.msRequestFullscreen) {
-                await element.msRequestFullscreen();
-            }
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
@@ -93,3 +72,52 @@
             shakaPlayer.configure({
                 drm: {
                     clearKeys: {
+                        [keyId]: keyValue
+                    }
+                }
+            });
+
+            try {
+                await shakaPlayer.load(manifest);
+                console.log('تم تحميل الفيديو المحمي بـ DRM بنجاح.');
+
+                // إعداد تصميم JW Player
+                const player = jwplayer("jwplayerDiv").setup({
+                    file: manifest,
+                    width: "100%",
+                    height: "100%",
+                    type: "dash",
+                    autostart: true,
+                    drm: {
+                        clearkey: {
+                            keyId: keyId,
+                            key: keyValue
+                        }
+                    },
+                    skin: {
+                        name: "glow"
+                    }
+                });
+
+                // إضافة ميزة التدوير عند ملء الشاشة
+                player.on('fullscreen', (event) => {
+                    if (event.fullscreen) {
+                        if (screen.orientation && screen.orientation.lock) {
+                            screen.orientation.lock('landscape').catch((err) => {
+                                console.warn('لم يتم قفل الشاشة:', err);
+                            });
+                        }
+                    } else {
+                        if (screen.orientation && screen.orientation.unlock) {
+                            screen.orientation.unlock();
+                        }
+                    }
+                });
+
+            } catch (error) {
+                console.error('حدث خطأ أثناء تحميل الفيديو:', error);
+            }
+        });
+    </script>
+</body>
+</html>
