--- a/index.html
+++ b/index.html
@@ -1,131 +1,72 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>Shaka Player with JW Design</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
-    <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+<!doctype html>
+<html lang="en"> 
+ <head> 
+  <meta charset="UTF-8"> 
+  <title>alraqi-tv</title> 
+  <link rel="icon" href="https://bein.alraqi-tv.com/logo/alraqi-tv.png"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <style>
+    body {
+      margin: 0;
+    }
+
+    .jwplayer {
+      position: absolute !important;
+    }
+
+    .jwplayer.jw-flag-aspect-mode {
+      min-height: 100%;
+      max-height: 100%;
+    }
+
+    .jw-logo-container {
+      position: absolute;
+      top: 2%;
+      right: 55%;
+    }
+  </style> 
+ </head> 
+ <body> 
+  <div id="jwplayerDiv"></div> 
+  <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script> 
+  <script type="text/javascript">
+    var config = {
+      "file": "https://live-d-01-todtv-da.akamaized.net/Content/DASH_DASH/Live/channel(ent-hd-01)/hdntl=exp=1735082844~acl=%2fContent%2f*~id=c3ef8251-525f-4b9c-8387-820a140a9351~data=hdntl,78ac2a69-2b2c-4643-90a0-016350be37e3~hmac=c81d6480196ed058b5c08cbd0fd4408390755472dd43f6cfc7264bc0da3ac5c2/manifest.mpd",
+      "drm": {
+        "clearkey": {
+          "keyId": "0a7934dddc3136a6922584b96c3fd1e5",
+          "key": "676e6d1dd00bfbe266003efaf0e3aa02"
         }
+      }
+    };
 
-        #video-container {
-            width: 80%;
-            max-width: 1280px;
-            aspect-ratio: 16 / 9;
-            background: #000;
-            position: relative;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
+    jwplayer("jwplayerDiv").setup({
+      file: config.file,
+      position: 'bottom',
+      autostart: true,
+      stretching: "",
+      width: "100%",
+      type: "dash",
+      volume: "100",
+      mute: false,
+      pipIcon: "true",
+      castIcon: "true",
+      title: "alraqi-CONNECT",
+      logo: {
+        file: "/bein",
+        hide: false,
+        position: "bottom-right",
+        margin: "150",
+        height: "25",
+      },
+      drm: {
+        clearkey: {
+          keyId: config.drm.clearkey.keyId,
+          key: config.drm.clearkey.key
         }
-
-        #jwplayerDiv {
-            width: 100%;
-            height: 100%;
-        }
-
-        /* إخفاء زر ملء الشاشة باستخدام CSS */
-        .jw-icon-fullscreen {
-            display: none !important;
-        }
-    </style>
-</head>
-<body>
-    <div id="video-container">
-        <div id="jwplayerDiv"></div>
-    </div>
-
-    <script>
-        // دالة لاستخراج المعلمات من الرابط
-        function getQueryParams() {
-            const params = new URLSearchParams(window.location.search);
-            return {
-                manifest: params.get('manifest'),
-                drmKey: params.get('drmkey')
-            };
-        }
-
-        document.addEventListener('DOMContentLoaded', async () => {
-            const { manifest, drmKey } = getQueryParams();
-
-            if (!manifest || !drmKey) {
-                console.error('المعلمات مطلوبة: manifest و drmkey');
-                return;
-            }
-
-            const [keyId, keyValue] = drmKey.split(':');
-            if (!keyId || !keyValue) {
-                console.error('صيغة drmkey غير صحيحة. يجب أن تكون على الشكل keyId:keyValue');
-                return;
-            }
-
-            // تشغيل الفيديو باستخدام Shaka Player
-            const videoContainer = document.createElement('video');
-            videoContainer.controls = true;
-            videoContainer.style.display = 'none'; // إخفاء الفيديو لتجنب تداخل التصميم
-
-            document.body.appendChild(videoContainer);
-
-            const shakaPlayer = new shaka.Player(videoContainer);
-
-            shakaPlayer.configure({
-                drm: {
-                    clearKeys: {
-                        [keyId]: keyValue
-                    }
-                }
-            });
-
-            try {
-                await shakaPlayer.load(manifest);
-                console.log('تم تحميل الفيديو المحمي بـ DRM بنجاح.');
-
-                // إعداد تصميم JW Player
-                const player = jwplayer("jwplayerDiv").setup({
-                    file: manifest,
-                    width: "100%",
-                    height: "100%",
-                    type: "dash",
-                    autostart: true,
-                    drm: {
-                        clearkey: {
-                            keyId: keyId,
-                            key: keyValue
-                        }
-                    },
-                    skin: {
-                        name: "glow"
-                    }
-                });
-
-                // تشغيل الفيديو في وضع ملء الشاشة مباشرة
-                player.on('ready', () => {
-                    player.setFullscreen(true);
-                });
-
-                // إخفاء زر ملء الشاشة باستخدام JavaScript كاحتياط إضافي
-                player.on('ready', () => {
-                    const fullscreenButton = document.querySelector('.jw-icon-fullscreen');
-                    if (fullscreenButton) {
-                        fullscreenButton.style.display = 'none';
-                    }
-                });
-
-                // تعطيل الضغط المزدوج لتغيير وضع الشاشة
-                player.on('displayClick', () => {
-                    player.setFullscreen(true); // إجبار البقاء في وضع ملء الشاشة
-                });
-
-            } catch (error) {
-                console.error('حدث خطأ أثناء تحميل الفيديو:', error);
-            }
-        });
-    </script>
-</body>
+      }
+    });
+  </script> 
+ </body>
 </html>
