--- a/index.html
+++ b/index.html
@@ -1,72 +1,50 @@
-<!doctype html>
-<html lang="en"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <title>alraqi-tv</title> 
-  <link rel="icon" href="https://bein.alraqi-tv.com/logo/alraqi-tv.png"> 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DRM Video Player</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
   <style>
     body {
       margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #000;
     }
-
-    .jwplayer {
-      position: absolute !important;
-    }
-
-    .jwplayer.jw-flag-aspect-mode {
-      min-height: 100%;
+    video {
+      max-width: 100%;
       max-height: 100%;
     }
+  </style>
+</head>
+<body>
+  <video id="video" controls autoplay></video>
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      const video = document.getElementById('video');
+      const player = new shaka.Player(video);
 
-    .jw-logo-container {
-      position: absolute;
-      top: 2%;
-      right: 55%;
-    }
-  </style> 
- </head> 
- <body> 
-  <div id="jwplayerDiv"></div> 
-  <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script> 
-  <script type="text/javascript">
-    var config = {
-      "file": "https://live-d-01-todtv-da.akamaized.net/Content/DASH_DASH/Live/channel(ent-hd-01)/hdntl=exp=1735082844~acl=%2fContent%2f*~id=c3ef8251-525f-4b9c-8387-820a140a9351~data=hdntl,78ac2a69-2b2c-4643-90a0-016350be37e3~hmac=c81d6480196ed058b5c08cbd0fd4408390755472dd43f6cfc7264bc0da3ac5c2/manifest.mpd",
-      "drm": {
-        "clearkey": {
-          "keyId": "0a7934dddc3136a6922584b96c3fd1e5",
-          "key": "676e6d1dd00bfbe266003efaf0e3aa02"
+      const config = {
+        drm: {
+          clearKeys: {
+            '0a7934dddc3136a6922584b96c3fd1e5': '676e6d1dd00bfbe266003efaf0e3aa02'
+          }
         }
-      }
-    };
+      };
 
-    jwplayer("jwplayerDiv").setup({
-      file: config.file,
-      position: 'bottom',
-      autostart: true,
-      stretching: "",
-      width: "100%",
-      type: "dash",
-      volume: "100",
-      mute: false,
-      pipIcon: "true",
-      castIcon: "true",
-      title: "alraqi-CONNECT",
-      logo: {
-        file: "/bein",
-        hide: false,
-        position: "bottom-right",
-        margin: "150",
-        height: "25",
-      },
-      drm: {
-        clearkey: {
-          keyId: config.drm.clearkey.keyId,
-          key: config.drm.clearkey.key
-        }
+      player.configure(config);
+
+      try {
+        // Load the DASH manifest URL
+        await player.load('https://live-d-01-todtv-da.akamaized.net/Content/DASH_DASH/Live/channel(ent-hd-01)/manifest.mpd');
+        console.log('The video has been loaded successfully!');
+      } catch (error) {
+        console.error('Error loading video:', error);
       }
     });
-  </script> 
- </body>
+  </script>
+</body>
 </html>
